# open-builder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.obd  config.txt  credits.txt  imgui.ini  libraries.md  meson.build  open-builder.sln  open-builder.vcxproj  save_files.cpp  save_files.h  vcpkg.json
src/client/: CMakeLists.txt  TextTable.h  client.cpp  client.h  client_config.cpp  client_config.h  client_controller.cpp  client_controller.h  client_engine.cpp  client_engine.h  client_state.h  client_state_controller.cpp  client_state_controller.h  engine.cpp  engine.h  engine_status.h  fps_counter.cpp  fps_counter.h  game.cpp  game.h  gameplay.cpp  gameplay.h  gameplay_command_handler.cpp  maths.cpp  maths.h  meson.build  window.cpp  window.h
src/client/core/: client_engine.cpp  client_engine.h  window.cpp  window.h
src/client/data/: client_voxel_data.h  voxel_textures.cpp  voxel_textures.h
src/client/game/: chunk_mesh.h  chunk_mesh_generation.cpp  chunk_mesh_generation.h  client_world.cpp  client_world.h  entity.h  fps_controller.cpp  game.cpp  game.h  game_def.cpp  game_def.h  game_type.cpp  game_type.h  player.cpp  player.h
src/client/game/state/: game_state.cpp  state_handler.cpp  survival_state.cpp  survival_state.h
src/client/game_states/: game_state.h  state_handler.cpp  state_handler.h  survival_state.cpp  survival_state.h
src/client/geometry/: geometry_factory.h  geometry_factory_models.cpp  geometry_factory_primatives.cpp  geometry_factory_terrain.cpp
src/client/gl/: cube_texture.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gl_errors.cpp  gl_errors.h  gl_object.h  gl_shader.cpp  gl_shader.h  gl_textures.cpp  gl_textures.h  gl_vertex_array.cpp  gl_vertex_array.h  primitive.cpp  primitive.h  shader.cpp  shader.h  texture2d.h  texture_atlas.cpp  texture_atlas.h  textures.cpp  textures.h  vertex_array.cpp  vertex_array.h
src/client/gui/: component.h  gui.cpp  gui.h  gui_component.h  gui_constants.h  gui_container.cpp  gui_container.h  gui_dimension.h  gui_master.cpp  gui_master.h  gui_rectangle.cpp  gui_rectangle.h  gui_shader.cpp  gui_shader.h  gui_system.cpp  gui_system.h  gui_text.cpp  gui_text.h  overlay.cpp  overlay.h  overlay_factory.cpp  overlay_factory.h  overlay_stack.cpp  overlay_stack.h  rectangle_component.cpp  text.cpp  text.h  text_component.cpp  widget.h
src/client/gui/component/: component.h  rectangle_component.cpp  rectangle_component.h  text_component.cpp  text_component.h
src/client/gui/widget/: button_widget.cpp  button_widget.h  checkbox_widget.cpp  checkbox_widget.h  image_widget.cpp  image_widget.h  label_widget.cpp  label_widget.h  text_box_widget.cpp  text_box_widget.h  widget.cpp  widget.h  widget_helper.cpp  widget_helper.h
src/client/input/: input_state.h  keyboard.cpp  keyboard.h
src/client/lua/: client_callback_api.cpp  client_control_api.cpp  client_input_api.cpp  client_lua_api.h  client_lua_callback.cpp  client_lua_callback.h  gui_api.cpp  gui_widget_api.cpp
src/client/network/: client.cpp  client.h  client_command_handler.cpp  client_commands.cpp  client_packet_handling.cpp  network_client.cpp  network_client.h
src/client/renderer/: camera.cpp  camera.h  chunk_renderer.cpp  chunk_renderer.h  colour.h  gui_renderer.cpp  gui_renderer.h  gui_shader.h  renderer.cpp  renderer.h  skybox_renderer.cpp  skybox_renderer.h  texture_atlas.h  textured_model.cpp  textured_model.h  vertex_array.cpp
src/client/renderer/gl/: cube_texture.cpp  cube_texture.h  gl_errors.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex_array.cpp
src/client/renderer/model/: mesh.h  textured_model.cpp  textured_model.h  vertex_array.cpp  vertex_array.h
src/client/renderer/texture/: cube_texture.cpp  cube_texture.h  texture2d.cpp  texture_atlas.cpp
src/client/state/: main_menu_state.cpp  main_menu_state.h  playing_state.cpp  playing_state.h  state_manager.cpp  state_manager.h
src/client/util/: maths.cpp  maths.h  model_loader.cpp  model_loader.h
src/client/world/: chunk_mesh.cpp  chunk_mesh.h  chunk_mesh_generation.cpp  chunk_mesh_generation.h  client_chunk_manager.cpp  client_chunk_manager.h  client_voxel.h  client_world.h  entity.h  world.cpp  world.h
src/client/world/block/: block.h
src/client/world/chunk/: chunk.cpp  chunk.h  chunk_mesh.cpp  chunk_mesh.h  chunk_mesh_builder.cpp  chunk_mesh_builder.h  chunk_section.cpp  chunk_section.h  chunk_state.h
src/common/: CMakeLists.txt
src/common/common/: CMakeLists.txt  constants.h  coordinate.h  coordinate_converion.cpp  coordinate_convertion.h  debug.cpp  debug.h  file_io.cpp  file_io.h  launch_config.h  macros.h  maths.cpp  maths.h  meson.build  net_constants.h  obd_config.cpp  obd_config.h  obd_parser.cpp  obd_parser.h  otf_format.cpp  otf_format.h  types.h  util.cpp  util.h
src/common/common/data/: data_registry.h  voxel_types.cpp  voxel_types.h
src/common/common/lua/: script_engine.cpp  script_engine.h  util_api.cpp
src/common/common/net/: commands.h  constants.h  input_state.h
src/common/common/network/: command_dispatcher.h  commands.h  constants.h  endpoint.h  (+16 more)
src/server/: CMakeLists.txt  application.cpp  application.h  endpoint.h  entity.h  meson.build  server.cpp  server.h  server_config.cpp  server_config.h  server_engine.cpp  server_engine.h
src/server/data/: server_biome_data.cpp  server_biome_data.h  server_voxel_data.cpp  server_voxel_data.h  voxel_data.cpp  voxel_data.h
src/server/game/: entity.cpp  entity.h
src/server/lua/: data_api.cpp  lua_api.h  server_lua_api.h  server_lua_callback.cpp  server_lua_callback.h  server_lua_callback_api.cpp  util_api.cpp  world_api.cpp
src/server/network/: client_session.cpp  client_session.h  endpoint.h  pending_client_session.cpp  server.cpp  server.h  server_broadcasts.cpp  server_command_handler.cpp  server_packet_handling.cpp  session.h
src/server/scripting/: server_game_data.cpp  server_game_data.h
src/server/world/: chunk.cpp  entity.cpp  entity.h  entity_state.h  server_voxel.h  server_world.cpp  server_world.h  terrain_generation.cpp  terrain_generation.h
(+202 files in other folders)
